--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "noruffle",
   "dependencies": {
     "@typegoose/typegoose": "^10.3.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -18,6 +19,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "ts-node": "^10.9.1",
