--- a/package.json
+++ b/package.json
@@ -8,21 +8,18 @@
     "dev": "nodemon app.start"
   },
   "author": "noruffle",
-  "dependencies": {
-    "@typegoose/typegoose": "^10.3.0",
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "mongoose": "^7.0.0",
-    "uuid": "^9.0.0"
-  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongoose": "^6.10.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "argon2": "^0.30.3"
   }
 }
